--- a/src/components/card-select/selectable-card.css
+++ b/src/components/card-select/selectable-card.css
@@ -17,6 +17,15 @@
   color: #FB8B24;
 }
 
+.no-select {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 input[type="radio"] {
   opacity: 0;
   position: absolute;
@@ -24,6 +33,12 @@ input[type="radio"] {
 
 input[type=radio]:not(:disabled) ~ label {
   cursor: pointer;
+}
+
+input[type=radio]:disabled ~ label {
+  box-shadow: none;
+  cursor: not-allowed;
+  background-color: grey;
 }
 
 input[type="radio"]:checked + label {
