--- a/src/components/card-select/selectable-card.css
+++ b/src/components/card-select/selectable-card.css
@@ -1,11 +1,12 @@
 .radio-card ul {
-  padding-inline-start: 10px;
+  padding-left: 0;
   margin-top: -5px;
 }
 
 .detail li {
   list-style-type: none;
   line-height: normal;
+  margin-top: 2px;
 }
 
 .detail-text {
@@ -38,7 +39,7 @@ input[type=radio]:not(:disabled) ~ label {
 input[type=radio]:disabled ~ label {
   box-shadow: none;
   cursor: not-allowed;
-  background-color: grey;
+  background-color: #ADA8B6;
 }
 
 input[type="radio"]:checked + label {
