--- a/src/components/pricing-page/components/price-display/price-display.css
+++ b/src/components/pricing-page/components/price-display/price-display.css
@@ -1,8 +1,8 @@
 .price-display {
   text-align: center;
-  background-image: linear-gradient(#5F0F40, rgba(154,3,30,0.99));
+  background-color: #364658;
   color: #FB8B24;
-  min-height: 150px;
+  min-height: 120px;
   position: sticky;
   position: -webkit-sticky;
   top: 0;
